# fuzzy-octo-doodle

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompileShader.cmake
scripts/: invoke_in_vs_dev_shell.ps1
shaders/: fire.frag  fire.vert  triangle.frag  triangle.vert
src/: main.cpp
